2007-02-16  Kai Blin  <kai.blin@gmail.com>
	* configure.ac: Fix installing the wfut binary.

	* libwfut/FileWriter.cpp, libwfut/FileParser.cpp, 
	  libwfut/ChannelWriter.cpp, libwfut/ChannelParser.cpp: Fix tinyxml
	  include now that tinyxml is in the main source.

2007-02-16  Simon Goodall  <libwfut@simongoodall.co.uk>

	* configure.ac: Removed tinyxml Makefile from generated files list.

2007-02-13  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/Makefile.am, libwfut/platform.cpp, libwfut/platform.h,
	  libwfut/IO.cpp, libwfut/WFUT.cpp: Created a platform class with
	  platform specific code. Currently provides a wrapper for mkdir and a
	  fake tmpfile implementation for win32 as the default one only works 
	  for administrator accounts.

	* configure.ac: Remove -ansi as this stops some win32 functions being
	  defined.

2007-02-13  Simon Goodall  <libwfut@simongoodall.co.uk>

	* Makefile.am: Install pkg-config file.

2007-02-13  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/Makefile.am, libwfut/tinyxml.cpp, libwfut/tinystr.cpp,
	  libwfut/tinyxmlerror.cpp, libwfut/tinyxmlparser.cpp, 
	  libwfut/tinystr.h, libwfut/tinyxml.h: Added tinyxml to the main source
	  tree to avoid linking problems when built as a static library.

	* Makefile.am: Remove tinyxml subdir.

	* configure.ac: Removed tinyxml subdir. Fixed LIBWFUT_LIBS declaration.
	  Added libwfut-0.1.pc to build.

	* libwfut-0.1.pc.in: Added pkg-config file.

2007-02-11  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/IO.cpp: Fixed curl handle leak.

2007-02-11  Simon Goodall  <libwfut@simongoodall.co.uk>

	* configure.ac: Added check for zlib.

2007-02-11  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/IO.cpp, libwfut/IO.h: Added new downloadFile function which
	  takes a FILE * instead of a filename.

	* libwfut/WFUT.cpp: Reworked the getFileList and getChannelList
	  functions to use more cross-platform functions. The files are now 