@@ -6,7 +6,7 @@
 
 namespace WFUT {
 
-std::string Encoder::encode(const std::string &str) {
+std::string Encoder::encodeString(const std::string &str) {
   std::string out;
 
   for (size_t i = 0; i < str.size(); ++i) {
@@ -17,8 +17,11 @@ std::string Encoder::encode(const std::string &str) {
       || (c >= '0' && c <= '9') ) {
       out += c;
     // Check individual chars
-    } else if (c == '-' || c == '_' || c == '.') {
+    } else if (c == '-' || c == '_' || c == '.' || c == '*') {
       out += c;
+    // Special case for a space
+    } else if (c == ' ') {
+      out += '+';
     // Convert everything else to char codes
     } else {
       char buf[4];
@@ -31,7 +34,7 @@ std::string Encoder::encode(const std::string &str) {
   return out;
 }
 
-std::string Encoder::decode(const std::string &str) {
+std::string Encoder::decodeString(const std::string &str) {
   std::string out;
   
   for (size_t i = 0; i < str.size(); ++i) {
@@ -42,8 +45,38 @@ std::string Encoder::decode(const std::string &str) {
       sscanf(buf, "%%%2x", &u);
       out += (char)u;
       i+=2; // Increment counter against extra chars just used
+    } else if (c == '+') {
+      out += ' ';
     } else {
       out +=c;
+    }
+  }
+
+  return out;
+}
+
+std::string Encoder::encodeURL(const std::string &str) {
+  std::string out;
+
+  for (size_t i = 0; i < str.size(); ++i) {
+    char c = str[i];
+    // Check char ranges
+    if ((c >= 'a' && c <= 'z')
+      || (c >= 'A' && c <= 'Z')
+      || (c >= '0' && c <= '9') ) {
+      out += c;
+    // Special case chars
+    } else if (c == '-' || c == '_' || c == '.' || c == '|' || c == '~' || c == '*' || c == '\'' || c == '(' || c == ')') {
+      out += c;
+    // More special case chars
+    } else if (c == ';' || c == '/' || c == '?' || c == ':' || c == '@' || c == '&' || c == '=' || c == '+' || c == '$' ||  c == ',') {
+      out += c;
+    // Convert everything else to char codes
+    } else {
+      char buf[4];
+      buf[3] = '\0';
+      snprintf(buf, 4, "%%%2.2X", c);
+      out += buf;
     }
   }
 
